# web_crawler

./: .bumpversion.cfg  README.md  mkdocs.yml  pyproject.toml
.github/actions/setup-pdm-env/: action.yml
.github/workflows/: build.yml  documentation.yml
docs/reference/: web_crawler.md
scripts/: lint-check.py  lint.py
src/web_crawler/: __init__.py  web_crawler.py
tests/: test_add.py
